edit sanctum configuration
